--- a/blocks/key-facts/key-facts.css
+++ b/blocks/key-facts/key-facts.css
@@ -10,26 +10,89 @@
 }
 
 .key-facts-wrapper .key-fact {
-  flex: 0 0 33.33%;
-}
-
-.key-facts-wrapper .key-fact h3 {
-  margin: 0;
-  font-family: var(--ff-volvo-broadprodigital);
-  font-size: 6.0rem;
-  line-height: 4.8rem;
+  display: flex;
+  flex-flow: column;
+  flex: 0 0 100%;
+  align-items: center;
+  padding: 0 15px;
 }
 
 .key-facts-wrapper .key-fact p {
-  margin: 0 0 2.4rem;
+  margin: 0;
+  text-align: center;
 }
 
+/* icon */
 .key-facts-wrapper .key-fact i.fa {
   font-size: 30px;
+  margin-bottom: 8px;
+}
+
+/* title */
+.key-facts-wrapper .key-facts h4 {
+  margin-bottom: 16px;
+  font-family: var(--ff-volvo-novum);
+  font-size: 2.0rem;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+/* intro */
+.key-facts-wrapper .key-facts h4 + p {
+  font-size: 1.6rem;
+  margin-bottom: 8px;
+}
+
+/* number */
+.key-facts-wrapper .key-facts p strong.number {
+  display: block;
+  margin-bottom: 16px ;
+  font-family: var(--ff-volvo-broadprodigital);
+  font-size: 6.0rem;
+  line-height: 4.8rem;
+  font-weight:400;
+}
+
+/* unit */
+.key-facts-wrapper .key-facts p strong.unit {
+  display:block;
+  margin-bottom: 8px;
+  font-family: var(--ff-volvo-novum);
+  font-size: 1.6rem;
+}
+
+/* description */
+.key-facts-wrapper .key-facts p:last-of-type {
+  font-family: var(--ff-volvo-novum);
+  font-size: 1.6rem;
+}
+
+/* the trailing line */
+.key-facts-wrapper .key-facts .key-fact > div {
+  width: 100%;;
+}
+
+.key-fact div.trailing-line::before {
+  content: " ";
+  display: block;
+  margin: 0 auto;
+  width: 20%;
+  padding-top: 30px;
+  border-top: 3px solid #E1DFDD;
+}
+
+@media screen and (min-width: 576px) {
+  .key-facts-wrapper .key-fact {
+    flex: 0 0 16.6667%;
+  }
+  
+  .key-facts-wrapper .key-facts.wide-columns .key-fact {
+    flex: 0 0 45%;
+  }
 }
 
 @media screen and (min-width: 768px) {
-  .key-facts-wrapper .key-fact {
-    flex: 0 0 16.6667%;
+  .key-facts-wrapper .key-facts.wide-columns .key-fact {
+    flex: 1 0 30%;
   }
 }
