feat: videos cookie (#93)
* #41 - Display video depends on the cookie value

* #41 - Refactor

* #41 Update video link styles

* #41 Add low resolution video info

* #41 add getting labels form placeholder file

* #41 - add full witdh video

* #41 Opening modal with wideo when click the video in carousel

* #41 Fix linting

* #41 Fix initial video modal animation when added to DOM

* #41 Fixes after CR

* #41 Fix displaying youtube videos as embeded

---------

Co-authored-by: Dirk Rudolph <drudolph@adobe.com>

--- a/blocks/embed/embed.css
+++ b/blocks/embed/embed.css
@@ -1,20 +1,38 @@
+.embed.embed-full-width {
+  width: 100%;
+  position: relative;
+  cursor: pointer;
+}
+
 .embed-video {
   margin: auto;
 }
 
-.embed-video-iframe {
+.embed-video-element {
   aspect-ratio: 16/9;
   width: 100%;
+}
+
+.embed .video-icon-wrapper {
+  pointer-events: none;
 }
 
 @media screen and (min-width: 768px) {
   .embed-video {
     width: 726px;
   }
+
+  .embed.embed-full-width .embed-video {
+    width: 100%;
+  }
 }
 
 @media screen and (min-width: 1300px) {
   .embed-video {
     width: 1170px;
+  }
+
+  .embed.embed-full-width .embed-video {
+    width: 100%;
   }
 }
