--- a/blocks/hero/hero.css
+++ b/blocks/hero/hero.css
@@ -13,6 +13,11 @@ main .hero-headings {
     text-align: center;
 }
 
+.left .hero-headings {
+    left: 0;
+    transform: translateX(0%);
+}
+
 main .hero-headings h1,
 main .hero-headings h4 {
     max-width: 1200px;
