excluded sub-nav from index and updated css for 1st element

--- a/blocks/sub-nav/sub-nav.css
+++ b/blocks/sub-nav/sub-nav.css
@@ -115,6 +115,8 @@
     .block.sub-nav li:first-child a {
         background-color: black;
         padding: 0 12px;
+        width: 110px;
+        text-align: center;
     }
 
     .block.sub-nav li:first-child a:hover {
