--- a/styles/lazy-styles.css
+++ b/styles/lazy-styles.css
@@ -37,7 +37,8 @@ body.disable-scroll, body.disable-scroll main {
 }
 
 :is(h1, h2, h3, h4, h5, h6) > em {
-  color: #A7A8A9;
+  color: var(--volvo-text-light-gray);
+  font-style: normal;
 }
 
 /*!
