--- a/blocks/specifications/specifications.css
+++ b/blocks/specifications/specifications.css
@@ -81,7 +81,7 @@
 .block.specifications .rowgroup-header {
     display: flex;
     justify-content: space-between;
-    align-items: center;        
+    align-items: center;
     grid-column: span var(--grid-col-count);
     background: none;
     border-radius: 0;
@@ -92,7 +92,7 @@
     color: unset;
     text-align: unset;
     font-size: 16px;
-    width: 100%; 
+    width: 100%;
 }
 
 .block.specifications .rowgroup-header:hover {
@@ -103,6 +103,10 @@
     display: block;
     content: '\f067';
     font-family: var(--ff-fontawesome);
+}
+
+.block.specifications .rowgroup-header[aria-expanded="true"]::after {
+    content: '\f068';
 }
 
 /* column header mobile */
