fix: arrow missing carousel (#217)
* fix missing arrow for links in carousel

* 189 fix arrows missing for carousel

* fix: consistent secondary cta style on teaser cards

---------

Co-authored-by: Lakshmi <lakshmishri.aswathnarayana@netcentric.biz>
Co-authored-by: Dirk Rudolph <drudolph@adobe.com>

--- a/blocks/carousel/carousel.css
+++ b/blocks/carousel/carousel.css
@@ -93,6 +93,12 @@
      display: none;
  }
 
+ .block.carousel .carousel-link {
+    white-space: inherit;
+    font-family: inherit;
+    font-weight: 700;
+ }
+
  @media screen and (min-width: 481px) {
     .block.carousel .mobile-controls button::after {
         font-size: 1.6rem;
@@ -201,4 +207,8 @@
         top: 15px;
     }
 
+    .block.carousel .carousel-content-wrapper {
+        padding-left: 18px;
+        padding-right: 18px;
+    }
  }
