--- a/blocks/teaser-cards/teaser-cards.css
+++ b/blocks/teaser-cards/teaser-cards.css
@@ -36,9 +36,10 @@
 }
 
 .block.teaser-cards img {
-  width: 100%;
+  max-width: 100%;
   object-fit: cover;
 }
+
 
 /* teaser title */
 .block.teaser-cards :is(h2, h3, h4) {
