--- a/blocks/magazine-articles/magazine-articles.css
+++ b/blocks/magazine-articles/magazine-articles.css
@@ -36,7 +36,7 @@
 .block.magazine-articles .pager {
     font-size: 1.4rem;
     display: grid;
-    margin-bottom: 1em;
+    margin: 1em 0;
     grid-template-columns: repeat(2, 1fr);
 }
 
@@ -144,13 +144,20 @@
     display: block;
 }
 
+.block.magazine-articles .article-list article {
+    padding: 2em 0;
+    border-top: 1px solid var(--background-light-gray);
+}
+
+.section.magazine-articles-container > div > div > div.articles > article:nth-child(1) {
+    border-top: 1px solid var(--background-light-gray);
+}
+
 .block.magazine-articles article a.imgcover {
     float: unset;
-    margin-bottom: 16px;
     padding-right: 15px;
     position: relative;
     z-index: 50;
-    width: 100%;
     height: 250px;
     display: block;
 }
@@ -211,11 +218,6 @@
     padding: 0;
 }
 
-.block.magazine-articles .article-list article {
-    padding: 2em 0;
-    border-top: 1px solid var(--background-light-gray);
-}
-
 .cta {
     display: inline-block;
     margin-bottom: 0;
@@ -262,19 +264,23 @@
     }
 }
 
-@media screen and (min-width: 991px) {
+@media screen and (min-width: 992px) {
     .block .latest-magazine-articles article,
     .block .related-magazine-articles article {
         display: unset;
     }
 
     .block.magazine-articles .articles article {
-        display: inline-flex!important;
+        display: inline-flex;
     }
 
-    .block.magazine-articles .articles article a.imgcover {
-        float: left!important;
-        height: 214px!important;
-        width: 380px!important;    
+    .block.magazine-articles article a.imgcover {
+        height: auto;
+    }
+
+    .section.magazine-articles-container > div > div > div.articles > article > a > picture {
+        float: left;
+        height: 214px;
+        width: 380px;    
     }
 }
