--- a/blocks/video-link/video-link.css
+++ b/blocks/video-link/video-link.css
@@ -1,4 +1,4 @@
-.video-link a.text-link-with-video {
+.block.video-link a.text-link-with-video {
   display: inline-flex;
   align-items: center;
   color: var(--volvo-text-gray);
@@ -10,15 +10,19 @@
   font-size: 16px;
 }
 
-.video-link a.text-link-with-video:hover {
+.block.video-link a.text-link-with-video:hover {
   color: #030304;
   background: transparent;
 }
 
-.video-link i {
+.block.video-link i {
   font-size: 48px;
 }
 
-.video-link a.text-link-with-video::after {
+.block.video-link a.text-link-with-video::after {
   content: unset;
+}
+
+.block.video-link {
+  text-align: center;
 }
