#166 heading-font-size vars updated

--- a/blocks/teaser-cards/teaser-cards.css
+++ b/blocks/teaser-cards/teaser-cards.css
@@ -52,7 +52,7 @@
 .block.teaser-cards h2 {
   letter-spacing: 3.6px;
   font-family: var(--ff-volvo-broadprodigital);
-  font-size: var(--heading-font-size-xxxl);
+  font-size: var(--heading-font-size-l);
   line-height: 1em;
 }
 
