feat: add no gap, small gap, full height, 1 col styles

--- a/blocks/teaser-grid/teaser-grid.css
+++ b/blocks/teaser-grid/teaser-grid.css
@@ -1,15 +1,30 @@
+/* stylelint-disable length-zero-no-unit */
 .section .teaser-grid-wrapper {
-    margin: 0;
-    padding: 0;
-    width: 100%;
-}
-
-.block.teaser-grid {
     --grid-row-count: 1;
     --grid-col-count: 2;
     --grid-col-gap: 15px;
     --grid-row-gap: 15px;
 
+    margin: 0;
+    padding: 0;
+    width: 100%;
+}
+
+.section .teaser-grid-wrapper.small-gap {
+    --grid-col-gap: 1px;
+    --grid-row-gap: 1px;
+}
+
+.section .teaser-grid-wrapper.no-gap {
+    --grid-col-gap: 0px;
+    --grid-row-gap: 0px;
+}
+
+.section .teaser-grid-wrapper ~ .teaser-grid-wrapper { margin-top: var(--grid-row-gap); }
+.section .teaser-grid-wrapper.small-gap ~ .teaser-grid-wrapper { margin-top: 1px; }
+.section .teaser-grid-wrapper.no-gap ~ .teaser-grid-wrapper { margin-top: 0; }
+
+.block.teaser-grid {
     position: relative;
     display: grid;
 }
@@ -20,6 +35,10 @@
     grid-column: 1;
     grid-row: 1;
     padding-bottom: calc(100% * var(--grid-col-count) + var(--grid-row-gap) * (var(--grid-col-count) - 1));
+}
+
+.block.teaser-grid.full-height::before {
+    padding-bottom: calc(77% * var(--grid-col-count) * var(--grid-row-count) + var(--grid-col-gap) * (var(--grid-col-count) * var(--grid-row-count) - 1));
 }
 
 .block.teaser-grid>ul {
@@ -97,7 +116,7 @@
 }
 
 @media screen and (min-width: 992px) {
-    .block.teaser-grid {
+    .teaser-grid-wrapper:not(.no-gap,.small-gap) {
         --grid-row-gap: 10px;
     }
 
@@ -117,5 +136,19 @@
 
     .block.teaser-grid.layout-7-5>ul {
         grid-template-columns: 7fr 5fr;
+    }
+
+    .block.teaser-grid>ul[style*="--grid-col-count:1"]>li {
+        justify-content: center;
+    }
+
+    .block.teaser-grid>ul[style*="--grid-col-count:1"]>li[data-align="right"] {
+        align-items: end;
+    }
+
+    .block.teaser-grid>ul[style*="--grid-col-count:1"]>li>div {
+        max-width: 380px;
+        margin-left: 70px;
+        margin-right: 70px;
     }
 }
