--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,4 @@
+/* stylelint-disable comment-empty-line-before */
 /*
  * Copyright 2020 Adobe. All rights reserved.
  * This file is licensed to you under the Apache License, Version 2.0 (the "License");
@@ -91,13 +92,15 @@
   --body-font-size-xxs: 1.3rem;
 
   /* heading sizes */
-  --heading-font-size-xxl: 7.2rem;
-  --heading-font-size-xl: 5.6rem;
-  --heading-font-size-l: 4.8rem;
-  --heading-font-size-ml: 3.2rem;
-  --heading-font-size-m: 2.4rem;
-  --heading-font-size-s: 2.0rem;
-  --heading-font-size-xs: 1.8rem;
+  /* the scale allows us to adjust all heading sizes but preserve the ratio */
+  --heading-font-size-scale: 1;
+  --heading-font-size-xxl: calc(7.2rem * var(--heading-font-size-scale));
+  --heading-font-size-xl: calc(5.6rem * var(--heading-font-size-scale));
+  --heading-font-size-l: calc(4.8rem * var(--heading-font-size-scale));
+  --heading-font-size-ml: calc(3.2rem * var(--heading-font-size-scale));
+  --heading-font-size-m: calc(2.4rem * var(--heading-font-size-scale));
+  --heading-font-size-s: calc(2.0rem * var(--heading-font-size-scale));
+  --heading-font-size-xs: calc(1.8rem * var(--heading-font-size-scale));
 
   /* nav height */
   --nav-height: 95px;
@@ -168,8 +171,7 @@ h4, h5, h6 {
   font-family: var(--heading-font-family);
   font-weight: normal;
   line-height: 1;
-  margin-top: 1em;
-  margin-bottom: .5em;
+  margin: 0;
   scroll-margin: calc(var(--nav-height) + 1em);
   font-style: normal;
 }
@@ -177,6 +179,7 @@ h4, h5, h6 {
 h1 {
   font-size: var(--heading-font-size-xxl);
   letter-spacing: -1.15px;
+  margin-bottom: 24px;
 }
 
 h2 {
@@ -184,18 +187,21 @@ h2 {
   font-size: var(--heading-font-size-xl);
   line-height: 1.1;
   letter-spacing: -0.5px;
+  margin-bottom: 16px;
 }
 
 h3 {
   font-size: var(--heading-font-size-l);
   line-height: 1.1;
   letter-spacing: 0;
+  margin-bottom: 10px;
 }
 
 h4 {
   font-size: var(--heading-font-size-ml);
   line-height: 1.25;
   letter-spacing: 0.25px;
+  margin-bottom: 8px;
 }
 
 h5 { font-size: var(--heading-font-size-s) }
