--- a/blocks/search-results/search-results.css
+++ b/blocks/search-results/search-results.css
@@ -1,4 +1,4 @@
-.search-results.block .search-input-wrapper{
+.search-results.block .search-input-wrapper {
   display: flex;
   margin-top: 48px;
   margin-bottom: 20px;
@@ -8,15 +8,29 @@
   height: 64px;
   background-color: #ebebea;
   border-radius: 0;
-  border:none;
+  border: none;
   max-width: 100%;
   font-size: 18px;
   padding-left: 30px;
 }
 
+.search-results.block .search-header {
+  font-family: var(--ff-volvo-broadprodigital);
+  font-size: 60px;
+  font-weight: 400;
+  line-height: 60px;
+  padding: 0 15px;
+  margin: 48px 0;
+}
+
+.search-results.block .search-term::placeholder {
+  opacity: 0.5;
+  text-transform: uppercase;
+}
+
 .search-results.block .search-button {
   height: 64px;
-  background: #004FBC;
+  background: #004fbc;
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
   width: 75px;
@@ -42,7 +56,10 @@
 .search-results.block .search-sort {
   font-size: 13px;
   flex: 1;
-  justify-content: flex-end;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: end;
 }
 
 .search-results.block .search-select {
@@ -53,15 +70,164 @@
   color: #495057;
 }
 
-@media screen and (max-width: 768px) {
-  .search-results.block .search-select{
+.search-results .search-no-results {
+  margin: 0 10px 24px;
+}
+
+.search-results .search-no-results-message {
+  color: #004fbc;
+  font-weight: 700;
+  font-size: 22px;
+  font-family: VolvoNovumRegular, sans-serif;
+  margin: 0;
+}
+
+.search-results .search-no-results-promp {
+  margin: 0;
+}
+
+.search-results .search-filter-by button {
+  border: 1px solid #33475a;
+  width: max-content;
+  padding: 10px 20px;
+  margin-bottom: 10px;
+  display: inline-flex;
+  background-color: #004fbc;
+  color: #fff;
+  margin-left: 10px;
+  font-size: 16px;
+  font-family: VolvoNovumRegular, sans-serif;
+}
+
+.search-results .search-filters-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 1050;
+  background: white;
+}
+
+.search-results .search-filters-header {
+  display: flex;
+  align-items: center;
+  padding: 20px 40px;
+  justify-content: space-between;
+  text-transform: uppercase;
+  font-size: 18px;
+  border-bottom: 1px solid #53565a;
+}
+
+.search-results .search-filters-header i {
+  height: 30px;
+  font-size: 30px;
+  line-height: 30px;
+}
+
+.search-results .search-filters {
+  padding: 40px;
+}
+
+.search-results .search-filter-group-header {
+  font-family: var(--fixed-font-family);
+  font-weight: 400;
+  display: block;
+  color: #33475a;
+  font-size: 16px;
+  line-height: 24px;
+}
+
+.search-results .search-filter-group {
+  padding-bottom: 14px;
+  margin-bottom: 15px;
+  border-bottom: 1px solid rgb(0 0 0 / 12.5%);
+}
+
+.search-results .search-filter-group:last-child {
+  border: none;
+}
+
+.search-results .search-filter-group-items {
+  margin: 0;
+  padding-left: 10px;
+  list-style: none;
+}
+
+.search-results .search-filter-group-item {
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  margin: 5px 0;
+}
+
+.search-results .search-filter-group-item input {
+  display: inline-block;
+  width: auto;
+  margin: 0;
+}
+
+.search-results .search-filter-group-item label {
+  padding-left: 5px;
+}
+
+.search-filter-more {
+  color: #004fbc;
+  background: transparent;
+  border: none;
+  font-weight: 400;
+  font-size: 13px;
+  font-family: VolvoNovumRegular, sans-serif;
+  line-height: 20px;
+  padding: 0;
+  margin-left: 10px;
+}
+
+.search-filter-done {
+  background-color: #004fbc;
+  padding: 10px 20px;
+  color: #fff;
+  position: absolute;
+  bottom: 20px;
+  right: 40px;
+  border: none;
+  font-size: 10px;
+  border-radius: 3px;
+  font-weight: 400;
+  font-family: VolvoNovumRegular, sans-serif;
+}
+
+@media screen and (min-width: 768px) {
+  .search-results.block .search-select {
     min-width: 130px;
+  }
+
+  .search-results .search-no-results-message {
+    font-size: 28px;
   }
 }
 
-@media (min-width: 768px) and (max-width:1140px){
+@media (min-width: 768px) and (max-width: 1140px) {
   .search-results-wrapper {
     max-width: 756px;
     margin: auto;
+  }
+}
+
+@media (min-width: 992px) {
+  .search-results .search-filter-by {
+    display: none;
+  }
+
+  .search-results .search-filters-header {
+    display: none;
+  }
+
+  .search-results .search-filters {
+    padding: 0;
+  }
+
+  .search-results .search-filters-container {
+    position: static;
   }
 }
