--- a/blocks/search-results/search-results.css
+++ b/blocks/search-results/search-results.css
@@ -1,4 +1,4 @@
-.search-results.block .search-input-wrapper {
+/* .search-results.block .search-input-wrapper {
   display: flex;
   margin-top: 48px;
   margin-bottom: 20px;
@@ -78,7 +78,7 @@
   color: #004fbc;
   font-weight: 700;
   font-size: 22px;
-  font-family: VolvoNovumRegular, sans-serif;
+  font-family: var(--ff-volvo-novum);
   margin: 0;
 }
 
@@ -96,7 +96,7 @@
   color: #fff;
   margin-left: 10px;
   font-size: 16px;
-  font-family: VolvoNovumRegular, sans-serif;
+  font-family: var(--ff-volvo-novum);
 }
 
 .search-results .search-filters-container {
@@ -177,7 +177,7 @@
   border: none;
   font-weight: 400;
   font-size: 13px;
-  font-family: VolvoNovumRegular, sans-serif;
+  font-family: var(--ff-volvo-novum);
   line-height: 20px;
   padding: 0;
   margin-left: 10px;
@@ -194,7 +194,7 @@
   font-size: 10px;
   border-radius: 3px;
   font-weight: 400;
-  font-family: VolvoNovumRegular, sans-serif;
+  font-family: var(--ff-volvo-novum);
 }
 
 @media screen and (min-width: 768px) {
@@ -230,4 +230,4 @@
   .search-results .search-filters-container {
     position: static;
   }
-}
+} */
