handle cases where additional information is not available

--- a/common/modal/modal.css
+++ b/common/modal/modal.css
@@ -102,6 +102,9 @@
 .modal-soundcloud .episode-image {
   flex: 20%;
 }
+.modal-soundcloud .episode-text {
+  flex: 80%;
+}
 
 .modal-soundcloud .episode-image img {
   width: 100%;
