--- a/blocks/magazine-articles/magazine-articles.css
+++ b/blocks/magazine-articles/magazine-articles.css
@@ -2,7 +2,7 @@
 .block.magazine-articles .list-filter {
     background-color: var(--volvo-text-gray);
     padding: 25px;
-    margin: 0 15px 24px;
+    margin: 0 0 24px;
 }
 
 .block.magazine-articles .list-filter input,
@@ -23,7 +23,7 @@
     border: 0;
 }
 
-.block.magazine-articles .list-filter fieldset div{
+.block.magazine-articles .list-filter fieldset div {
     flex-basis: 0;
     -webkit-box-flex: 1;
     flex-grow: 1;
@@ -76,9 +76,8 @@
     position: absolute;
     display: inline-block;
     right: 15px;
-    top: 50%;
-    margin-top: -1.2rem;
-    line-height: 2.0rem;
+    top: 15px;
+    bottom: 0;
     font-size: 2.4rem;
     pointer-events: none;
 }
@@ -145,7 +144,6 @@
 
 .block.magazine-articles article a.imgcover {
     float: unset;
-    padding-right: 15px;
     position: relative;
     z-index: 50;
     height: 250px;
@@ -253,6 +251,10 @@
         flex: 1 1 auto;
         margin: 0 15px;
     }
+
+    /* make sure the fields have the same width when stacked */
+    .block.magazine-articles .list-filter fieldset div:nth-of-type(odd) { min-width: 294px; }
+    .block.magazine-articles .list-filter fieldset div:nth-of-type(even) { min-width: 239px; }
 }
 
 @media screen and (min-width: 992px) {
@@ -266,6 +268,7 @@
     }
 
     .block.magazine-articles article a.imgcover {
+        padding-right: 15px;
         height: auto;
     }
 
@@ -283,4 +286,8 @@
     .block.magazine-articles .article-list article .content {
         padding-left: 15px;
     }
+
+    /* make sure the fields have the same width when stacked */
+    .block.magazine-articles .list-filter fieldset div:nth-of-type(odd) { min-width: 396px; }
+    .block.magazine-articles .list-filter fieldset div:nth-of-type(even) { min-width: 341px; }
 }
