#50 update margin to the graph's buttons in large vp

--- a/blocks/calculator/calculator.css
+++ b/blocks/calculator/calculator.css
@@ -298,3 +298,9 @@ main .section .calculator-wrapper {
     width: 90%;
   }
 }
+
+@media (min-width: 1300px) {
+  .charts-selectors {
+    margin: 0;
+  }
+}
