--- a/styles/styles.css
+++ b/styles/styles.css
@@ -295,10 +295,10 @@ button.primary {
   border: 2px solid var(--text-color);
 }
 
-a.button.primary.dark,
-button.primary {
-  color: var(--c-white);
-  background-color: var(--text-color);
+button, input, select, textarea {
+  color: inherit;
+  font: inherit;
+  margin: 0;
 }
 
 button:disabled, button:disabled:hover {
@@ -312,6 +312,14 @@ a.button.primary:hover, button.primary:hover {
   color: var(--text-color);
 }
 
+input[type=text],select,textarea {
+  display: block;
+  padding: 10px 40px 10px 15px;
+  border: none;
+  border-radius: 0;
+  background-color: var(--background-light-gray);
+  appearance: none;
+}
 
 /* commont elements */
 
@@ -448,6 +456,12 @@ ul.cta-list li {
   padding: 0 50px;
 }
 
+.pager .pagination ol li:not(:first-child) {
+  float: right;
+  padding: 10px;
+  margin-top: -10px;
+}
+
 main .section.tabbed-container-full-width > div {
   padding: 0;
   width: unset;
@@ -478,8 +492,8 @@ main .section.tabbed-container ul.tab-navigation button {
   margin: 0;
 }
 
-main .section.tabbed-container ul.tab-navigation li.active,
-main .section.tabbed-container ul.tab-navigation li:hover {
+.section.tabbed-container ul.tab-navigation li.active,
+.section.tabbed-container ul.tab-navigation li:hover {
   border-bottom: 3px solid var(--link-color);
 }
 
@@ -547,6 +561,59 @@ a.button.text-link-with-video i {
 
 a.button.text-link-with-video::after {
   content: unset;
+}
+
+/* pagination */
+.pager .pagination ol li .last::before {
+  font-family: var(--ff-fontawesome);
+  content: "\f051";
+  font-size: 12px;
+  text-decoration: none;
+}
+
+.pager .pagination ol li .first::before {
+  font-family: var(--ff-fontawesome);
+  content: "\f048";
+  font-size: 12px;
+  text-decoration: none;
+}
+
+.pager .pagination ol li .next::before {
+  font-family: var(--ff-fontawesome);
+  content: "\f054";
+  font-size: 12px;
+  text-decoration: none;
+}
+
+.pager .pagination ol li .prev::before {
+  font-family: var(--ff-fontawesome);
+  content: "\f053";
+  font-size: 12px;
+  text-decoration: none;
+}
+
+div.block div.pager {
+  font-size: 1.4rem;
+  display: grid;
+  margin-bottom: 1em;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+div.block div.pager .pagination {
+  justify-self: end;
+}
+
+div.block div.pager .pagination .scroll {
+  padding: 0;
+  margin: 0 0 0 15px;
+  display: inline-flex;
+  gap: 5px;
+  list-style: none;
+}
+
+div.block div.pager .pagination .scroll li a {
+  color: var(--volvo-text-gray);
+  font-family: var(--ff-volvo-novum-medium);
 }
 
 @media screen and (min-width: 480px) {
