--- a/templates/magazine/magazine.css
+++ b/templates/magazine/magazine.css
@@ -1,15 +1,18 @@
 body.magazine>main {
   position: relative;
-  padding: 108px 15px 0 15px;
+  padding: 10px 0 0;
   margin: 0 auto;
+}
+
+body.magazine>main div.default-content-wrapper > blockquote > p > picture {
+  float: left;
+  padding-right: 20px;
 }
 
 body.magazine>main .section.template .row.size-img {
   display: flex;
-  flex-direction: column;
+  flex-flow: column wrap;
   height: 410px;
-  padding: 0;
-  flex-wrap: wrap;
   overflow: hidden;
 }
 
@@ -17,7 +20,6 @@ body.magazine>main .section.template .row.size-img picture {
   width: 100%;
   order: 2;
   height: 140px;
-
 }
 
 body.magazine>main .section.template .row.size-img picture img {
@@ -45,8 +47,6 @@ body.magazine>main .section.template.article-hero>div>div>div.top-details.hide-d
 }
 
 body.magazine>main .section.template.article-hero>div>div>h3.title-sentence {
-  font-size: 24px !important;
-  letter-spacing: -.1px !important;
   color: var(--volvo-text-gray);
   margin-bottom: 10px;
   font-weight: 700;
@@ -106,6 +106,7 @@ body.magazine>main .section.article-sidebar .share-icons button {
   border: 0;
   margin: 10px;
 }
+
 body.magazine>main .section.article-sidebar .share-icons button i {
   font-size: 16px;
 }
@@ -141,6 +142,14 @@ body.magazine>main .section.template.article-sidebar > div.subscribe > a > i {
   padding-bottom: 4px;
 }
 
+
+body.magazine>main div.default-content-wrapper > blockquote > p {
+  quotes: none;
+  text-align: center;
+  display: table;
+  margin: 0 auto;
+}
+
 body.magazine>main .section.article-sidebar p {
   color: var(--volvo-text-gray);
   font-weight: 700;
@@ -158,17 +167,6 @@ body.magazine>main .section.related-articles-container>div.default-content-wrapp
 body.magazine>main div.default-content-wrapper > blockquote > p::before,
 body.magazine>main div.default-content-wrapper > blockquote > p::after {
   content: none;
-}
-
-body.magazine>main div.default-content-wrapper > blockquote > p > picture {
-  float: left;
-  padding-right: 20px;
-}
-
-body.magazine>main div.default-content-wrapper > blockquote > p {
-  quotes: none;
-  text-align: center;
-  display: table;
 }
 
 body.magazine > main > div.section.related-articles-container > div.related-articles-wrapper {
